[gd_scene load_steps=2 format=3 uid="uid://cue2tgc53d7p8"]

[ext_resource type="Script" path="res://team.gd" id="1_k73c8"]

[node name="Team" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_k73c8")

[node name="TeamID" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Team ID"

[node name="Auton" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Corner" type="CheckBox" parent="Auton"]
layout_mode = 2
text = "Triball out of Corner"

[node name="Scored" type="CheckBox" parent="Auton"]
layout_mode = 2
text = "Scored Preload"

[node name="Bar" type="CheckBox" parent="Auton"]
layout_mode = 2
text = "Touched Bar"

[node name="OffensiveZone" type="CheckBox" parent="Auton"]
layout_mode = 2
text = "Preload to Offensive Zone"

[node name="CrossedLine" type="CheckBox" parent="Auton"]
layout_mode = 2
text = "Crossed Line"

[node name="Notes" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NoteField" type="LineEdit" parent="Notes"]
layout_mode = 2
placeholder_text = "Notes"
